Ensure native access in all relevant scenarios.
Consider XInput default deadzones.